// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/GenericModal should match snapshot for base case 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="dialog"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      aria-labelledby="genericModalLabel"
      class="fade in modal"
      id="genericModal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="a11y__modal GenericModal modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            data-testid="sentinelStart"
            tabindex="-1"
          />
          <div
            class="GenericModal__wrapper-enter-key-press-catcher"
            tabindex="0"
          >
            <div
              class="modal-header"
            >
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
                <span
                  class="sr-only"
                >
                  Close
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="GenericModal__header"
              >
                <h1
                  id="genericModalLabel"
                >
                  Modal Header Text
                </h1>
              </div>
              <div
                class="GenericModal__body"
              />
            </div>
          </div>
          <div
            data-testid="sentinelEnd"
            tabindex="-1"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`components/GenericModal should match snapshot with both buttons 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="dialog"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      aria-labelledby="genericModalLabel"
      class="fade in modal"
      id="genericModal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="a11y__modal GenericModal modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            data-testid="sentinelStart"
            tabindex="-1"
          />
          <div
            class="GenericModal__wrapper-enter-key-press-catcher"
            tabindex="0"
          >
            <div
              class="modal-header"
            >
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
                <span
                  class="sr-only"
                >
                  Close
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="GenericModal__header"
              >
                <h1
                  id="genericModalLabel"
                >
                  Modal Header Text
                </h1>
              </div>
              <div
                class="GenericModal__body"
              />
            </div>
            <div
              class="modal-footer"
            >
              <button
                class="GenericModal__button cancel"
                data-testid="GenericModal__button_cancel"
                type="button"
              >
                Cancel
              </button>
              <button
                class="GenericModal__button confirm"
                data-testid="GenericModal__button_confirm"
                type="submit"
              >
                Confirm
              </button>
            </div>
          </div>
          <div
            data-testid="sentinelEnd"
            tabindex="-1"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`components/GenericModal should match snapshot with disabled confirm button 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="dialog"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      aria-labelledby="genericModalLabel"
      class="fade in modal"
      id="genericModal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="a11y__modal GenericModal modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            data-testid="sentinelStart"
            tabindex="-1"
          />
          <div
            class="GenericModal__wrapper-enter-key-press-catcher"
            tabindex="0"
          >
            <div
              class="modal-header"
            >
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
                <span
                  class="sr-only"
                >
                  Close
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="GenericModal__header"
              >
                <h1
                  id="genericModalLabel"
                >
                  Modal Header Text
                </h1>
              </div>
              <div
                class="GenericModal__body"
              />
            </div>
            <div
              class="modal-footer"
            >
              <button
                class="GenericModal__button confirm disabled"
                data-testid="GenericModal__button_confirm"
                disabled=""
                type="submit"
              >
                Confirm
              </button>
            </div>
          </div>
          <div
            data-testid="sentinelEnd"
            tabindex="-1"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
